Embed throw in urls

--- a/studies/index.html
+++ b/studies/index.html
@@ -2,11 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Studies" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://allytoall.github.io/thumbnails/studies.png" />
-    <meta property="og:url" content="https://allytoall.github.io/studies" />
-    <meta property="og:description" content="Studies" />
+    <meta property="og:title" content="Studies"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://allytoall.github.io/thumbnails/studies.png"/>
+    <meta property="og:url" content="https://allytoall.github.io/studies"/>
+    <meta property="og:description"
+          content="https://doi.org/10.1001/jamanetworkopen.2021.4739
+https://doi.org/10.1001/jamanetworkopen.2022.0978
+https://doi.org/10.1001/jamanetworkopen.2023.31919
+https://doi.org/10.1001/jamanetworkopen.2025.0955
+https://doi.org/10.1001/jamapediatrics.2022.3424
+https://doi.org/10.1001/jamasurg.2021.0952
+https://doi.org/10.1007/BF01542484
+https://doi.org/10.1007/s10508-013-0099-8
+https://doi.org/10.1016/j.cppeds.2019.100683
+https://doi.org/10.1016/j.eclinm.2025.103458
+https://doi.org/10.1016/j.jaac.2016.10.016
+https://doi.org/10.1016/j.jadohealth.2016.06.012
+https://doi.org/10.1016/j.jadohealth.2018.02.003
+https://doi.org/10.1016/j.jadohealth.2021.10.036
+https://doi.org/10.1016/j.jadohealth.2022.06.008
+https://doi.org/10.1542/peds.2021-056082
+https://doi.org/10.1080/15532739.2011.700873
+https://doi.org/10.21037/atm-20-6204
+https://doi.org/10.1007/s004310051289
+https://doi.org/10.1111/j.1743-6109.2010.01943.x
+https://doi.org/10.1016/j.mce.2006.04.012
+https://doi.org/10.1210/jcem-67-2-368
+https://doi.org/10.1016/j.jadohealth.2018.07.016
+https://doi.org/10.1016/j.jadohealth.2016.08.027
+https://doi.org/10.1007/s11920-019-1097-x
+https://doi.org/10.1016/j.jadohealth.2019.06.011
+https://doi.org/10.1542/peds.2019-1725
+https://doi.org/10.1542/peds.2013-2958
+https://doi.org/10.1016/j.jadohealth.2024.09.009
+https://doi.org/10.1016/j.lana.2023.100544
+https://doi.org/10.1016/j.sexol.2006.04.002
+https://doi.org/10.1017/S0033291704002776
+https://doi.org/10.1023/A:1024086814364
+https://doi.org/10.1037/cpp0000288
+https://doi.org/10.1056/NEJMoa2206297
+https://doi.org/10.1097/GOX.0000000000003477
+https://doi.org/10.1097/SAP.0000000000003233
+https://doi.org/10.1111/j.1365-2265.2009.03625.x
+https://doi.org/10.1176/appi.ajp.2019.19010080
+https://doi.org/10.1177/26318318231189836
+https://doi.org/10.1186/s12889-015-1867-2
+https://doi.org/10.1371/journal.pone.0261039
+https://doi.org/10.1542/peds.2015-3223
+https://doi.org/10.1542/peds.2022-060943
+https://doi.org/10.1542/peds.2023-064292
+https://doi.org/10.1146/annurev-med-043021-032007"/>
     <title>Studies</title>
     <link rel="stylesheet" href="https://allytoall.github.io/output.css">
     <script src="https://allytoall.github.io/urlHandling.js"></script>
@@ -66,7 +112,6 @@
 <p>
     <a href="https://doi.org/10.1001/jamanetworkopen.2021.4739">
         https://doi.org/10.1001/jamanetworkopen.2021.4739
-
     </a>
 </p>
 <p>These results demonstrate that many socially transitioned transgender youth experience levels of anxiety and
@@ -83,7 +128,6 @@
 <p>
     <a href="https://doi.org/10.1001/jamanetworkopen.2022.0978">
         https://doi.org/10.1001/jamanetworkopen.2022.0978
-
     </a>
 </p>
 <p>Our study provides quantitative evidence that access to PBs or GAHs in a multidisciplinary gender-affirming setting
@@ -100,7 +144,6 @@
 <p>
     <a href="https://doi.org/10.1001/jamanetworkopen.2023.31919">
         https://doi.org/10.1001/jamanetworkopen.2023.31919
-
     </a>
 </p>
 <p>Compared with standard care, the intervention group had a decrease in gender dysphoria, a clinically
@@ -119,7 +162,6 @@
 <p>
     <a href="https://doi.org/10.1001/jamanetworkopen.2025.0955">
         https://doi.org/10.1001/jamanetworkopen.2025.0955
-
     </a>
 </p>
 <p>The TGD patients prescribed GAHT had a 15% lower risk of past 2-week moderate-to-severe depressive symptoms across
@@ -137,7 +179,6 @@
 <p>
     <a href="https://doi.org/10.1001/jamapediatrics.2022.3424">
         https://doi.org/10.1001/jamapediatrics.2022.3424
-
     </a>
 </p>
 <p>
@@ -159,7 +200,6 @@
 <p>
     <a href="https://doi.org/10.1001/jamasurg.2021.0952">
         https://doi.org/10.1001/jamasurg.2021.0952
-
     </a>
 </p>
 <p>
@@ -173,7 +213,6 @@
 <p>
     <a href="https://doi.org/10.1007/BF01542484">
         https://doi.org/10.1007/BF01542484
-
     </a>
 </p>
 <p>
@@ -186,7 +225,6 @@
 <p>
     <a href="https://doi.org/10.1007/s10508-013-0099-8">
         https://doi.org/10.1007/s10508-013-0099-8
-
     </a>
 </p>
 <p>
@@ -201,7 +239,6 @@
 <p>
     <a href="https://doi.org/10.1016/j.cppeds.2019.100683">
         https://doi.org/10.1016/j.cppeds.2019.100683
-
     </a>
 </p>
 <p>
@@ -217,7 +254,6 @@
 <p>
     <a href="https://doi.org/10.1016/j.eclinm.2025.103458">
         https://doi.org/10.1016/j.eclinm.2025.103458
-
     </a>
 </p>
 <p>
@@ -233,7 +269,6 @@
 <p>
     <a href="https://doi.org/10.1016/j.jaac.2016.10.016">
         https://doi.org/10.1016/j.jaac.2016.10.016
-
     </a>
 </p>
 <p>
@@ -254,7 +289,6 @@
 <p>
     <a href="https://doi.org/10.1016/j.jadohealth.2016.06.012">
         https://doi.org/10.1016/j.jadohealth.2016.06.012
-
     </a>
 </p>
 <p>
@@ -275,7 +309,6 @@
 <p>
     <a href="https://doi.org/10.1016/j.jadohealth.2018.02.003">
         https://doi.org/10.1016/j.jadohealth.2018.02.003
-
     </a>
 </p>
 <p>
@@ -295,7 +328,6 @@
 <p>
     <a href="https://doi.org/10.1016/j.jadohealth.2021.10.036">
         https://doi.org/10.1016/j.jadohealth.2021.10.036
-
     </a>
 </p>
 <p>
@@ -318,7 +350,6 @@
 <p>
     <a href="https://doi.org/10.1016/j.jadohealth.2022.06.008">
         https://doi.org/10.1016/j.jadohealth.2022.06.008
-
     </a>
 </p>
 <p>
@@ -356,7 +387,6 @@
 <p>
     <a href="https://doi.org/10.1542/peds.2021-056082">
         https://doi.org/10.1542/peds.2021-056082
-
     </a>
 </p>
 <br>
@@ -366,7 +396,6 @@
 <p>
     <a href="https://doi.org/10.1080/15532739.2011.700873">
         https://doi.org/10.1080/15532739.2011.700873
-
     </a>
 </p>
 <br>
@@ -376,7 +405,6 @@
 <p>
     <a href="https://doi.org/10.21037/atm-20-6204">
         https://doi.org/10.21037/atm-20-6204
-
     </a>
 </p>
 <br>
@@ -387,7 +415,6 @@
 <p>
     <a href="https://doi.org/10.1007/s004310051289">
         https://doi.org/10.1007/s004310051289
-
     </a>
 </p>
 <br>
@@ -397,7 +424,6 @@
 <p>
     <a href="https://doi.org/10.1111/j.1743-6109.2010.01943.x">
         https://doi.org/10.1111/j.1743-6109.2010.01943.x
-
     </a>
 </p>
 <br>
@@ -407,7 +433,6 @@
 <p>
     <a href="https://doi.org/10.1016/j.mce.2006.04.012">
         https://doi.org/10.1016/j.mce.2006.04.012
-
     </a>
 </p>
 <br>
@@ -418,7 +443,6 @@
 <p>
     <a href="https://doi.org/10.1210/jcem-67-2-368">
         https://doi.org/10.1210/jcem-67-2-368
-
     </a>
 </p>
 <br>
@@ -428,7 +452,6 @@
 <p>
     <a href="https://doi.org/10.1016/j.jadohealth.2018.07.016">
         https://doi.org/10.1016/j.jadohealth.2018.07.016
-
     </a>
 </p>
 <br>
@@ -438,7 +461,6 @@
 <p>
     <a href="https://doi.org/10.1016/j.jadohealth.2016.08.027">
         https://doi.org/10.1016/j.jadohealth.2016.08.027
-
     </a>
 </p>
 <br>
