Embed throw in urls

--- a/studies/index.html
+++ b/studies/index.html
@@ -7,52 +7,7 @@
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/studies.png"/>
     <meta property="og:url" content="https://allytoall.github.io/studies"/>
     <meta property="og:description"
-          content="https://doi.org/10.1001/jamanetworkopen.2021.4739
-https://doi.org/10.1001/jamanetworkopen.2022.0978
-https://doi.org/10.1001/jamanetworkopen.2023.31919
-https://doi.org/10.1001/jamanetworkopen.2025.0955
-https://doi.org/10.1001/jamapediatrics.2022.3424
-https://doi.org/10.1001/jamasurg.2021.0952
-https://doi.org/10.1007/BF01542484
-https://doi.org/10.1007/s10508-013-0099-8
-https://doi.org/10.1016/j.cppeds.2019.100683
-https://doi.org/10.1016/j.eclinm.2025.103458
-https://doi.org/10.1016/j.jaac.2016.10.016
-https://doi.org/10.1016/j.jadohealth.2016.06.012
-https://doi.org/10.1016/j.jadohealth.2018.02.003
-https://doi.org/10.1016/j.jadohealth.2021.10.036
-https://doi.org/10.1016/j.jadohealth.2022.06.008
-https://doi.org/10.1542/peds.2021-056082
-https://doi.org/10.1080/15532739.2011.700873
-https://doi.org/10.21037/atm-20-6204
-https://doi.org/10.1007/s004310051289
-https://doi.org/10.1111/j.1743-6109.2010.01943.x
-https://doi.org/10.1016/j.mce.2006.04.012
-https://doi.org/10.1210/jcem-67-2-368
-https://doi.org/10.1016/j.jadohealth.2018.07.016
-https://doi.org/10.1016/j.jadohealth.2016.08.027
-https://doi.org/10.1007/s11920-019-1097-x
-https://doi.org/10.1016/j.jadohealth.2019.06.011
-https://doi.org/10.1542/peds.2019-1725
-https://doi.org/10.1542/peds.2013-2958
-https://doi.org/10.1016/j.jadohealth.2024.09.009
-https://doi.org/10.1016/j.lana.2023.100544
-https://doi.org/10.1016/j.sexol.2006.04.002
-https://doi.org/10.1017/S0033291704002776
-https://doi.org/10.1023/A:1024086814364
-https://doi.org/10.1037/cpp0000288
-https://doi.org/10.1056/NEJMoa2206297
-https://doi.org/10.1097/GOX.0000000000003477
-https://doi.org/10.1097/SAP.0000000000003233
-https://doi.org/10.1111/j.1365-2265.2009.03625.x
-https://doi.org/10.1176/appi.ajp.2019.19010080
-https://doi.org/10.1177/26318318231189836
-https://doi.org/10.1186/s12889-015-1867-2
-https://doi.org/10.1371/journal.pone.0261039
-https://doi.org/10.1542/peds.2015-3223
-https://doi.org/10.1542/peds.2022-060943
-https://doi.org/10.1542/peds.2023-064292
-https://doi.org/10.1146/annurev-med-043021-032007"/>
+          content="A page containing a bunch of studies"/>
     <title>Studies</title>
     <link rel="stylesheet" href="https://allytoall.github.io/output.css">
     <script src="https://allytoall.github.io/urlHandling.js"></script>
