Embed throw in urls

--- a/code/index.html
+++ b/code/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Website's Source Code" />
+    <meta property="og:title" content="Source Code" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/source.png" />
     <meta property="og:url" content="https://github.com/AllyToAll/AllyToAll.github.io" />
-    <meta property="og:description" content="Website's source code" />
+    <meta property="og:description" content="Website's source code
+This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io" />
     <meta http-equiv="refresh" content="0; url=https://github.com/AllyToAll/AllyToAll.github.io">
     <title>Redirecting...</title>
 </head>
