--- a/discord/index.html
+++ b/discord/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Allyce's Discord" />
+    <meta property="og:title" content="Discord" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://discord.com/users/406481120641810433" />
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/Discord-Symbol-Black.png" />
-    <meta property="og:description" content="Allyce's Silly Little Website :3" />
+    <meta property="og:description" content="Allyce's Discord Profile" />
     <title>Discord</title>
     <link rel="stylesheet" href="https://allytoall.github.io/output.css">
     <script src="https://allytoall.github.io/urlHandling.js"></script>
