--- a/links/bsky/index.html
+++ b/links/bsky/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="Bluesky" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Bluesky_Logo.svg/640px-Bluesky_Logo.svg.png" />
+    <meta property="og:url" content="https://bsky.app/profile/allyce1.bsky.social" />
+    <meta property="og:description" content="Allyce's Bluesky Profile
+This is a redirect to https://bsky.app/profile/allyce1.bsky.social" />
     <meta http-equiv="refresh" content="0; url=https://bsky.app/profile/allyce1.bsky.social">
     <title>Redirecting...</title>
 </head>
