--- a/quotes/index.html
+++ b/quotes/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Allyce's Quoes" />
+    <meta property="og:title" content="Quotes" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/index.png" />
     <meta property="og:url" content="https://allytoall.github.io/quotes" />
