--- a/blahaj/index.html
+++ b/blahaj/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Allyce's Blahaj" />
+    <meta property="og:title" content="Blahaj" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/Blobhaj_Default.png" />
     <meta property="og:url" content="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" />
-    <meta property="og:description" content="Allyce's Blahaj :3" />
+    <meta property="og:description" content="Allyce's Blahaj :3
+This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" />
     <meta http-equiv="refresh" content="0; url=https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">
     <title>Redirecting...</title>
 </head>
