--- a/games/index.html
+++ b/games/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Allyce's Games" />
+    <meta property="og:title" content="Games" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/controller.png" />
     <meta property="og:url" content="https://allytoall.github.io/games" />
