--- a/gpg/index.html
+++ b/gpg/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Allyce's GPG Key" />
+    <meta property="og:title" content="GPG Key" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/GnuPG-Logo.svg/1920px-GnuPG-Logo.svg.png" />
     <meta property="og:url" content="https://allytoall.github.io/gpg" />
