--- a/pronouns/index.html
+++ b/pronouns/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Allyce's Pronouns" />
+    <meta property="og:title" content="Pronouns" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://en.pronouns.page/logo/logo-primary.svg" />
     <meta property="og:url" content="https://allytoall.github.io/pronouns" />
-    <meta property="og:description" content="Allyce's Pronouns" />
+    <meta property="og:description" content="Allyce's Pronoun Page" />
     <meta http-equiv="refresh" content="0; url=https://en.pronouns.page/@Allyce">
     <title>Redirecting...</title>
 </head>
