--- a/discord/index.html
+++ b/discord/index.html
@@ -8,8 +8,8 @@
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/Discord-Symbol-Black.png" />
     <meta property="og:description" content="Allyce's Discord Profile" />
     <title>Discord</title>
-    <link rel="stylesheet" href="https://allytoall.github.io/output.css">
-    <script src="https://allytoall.github.io/urlHandling.js"></script>
+    <link rel="stylesheet" href="/output.css">
+    <script src="/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
