--- a/gpg/index.html
+++ b/gpg/index.html
@@ -8,8 +8,8 @@
     <meta property="og:url" content="https://allytoall.github.io/gpg" />
     <meta property="og:description" content="Allyce's GPG Key" />
     <title>allytoall@protonmail.com</title>
-    <link rel="stylesheet" href="https://allytoall.github.io/output.css">
-    <script src="https://allytoall.github.io/urlHandling.js"></script>
+    <link rel="stylesheet" href="/output.css">
+    <script src="/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
@@ -23,7 +23,7 @@
             View
         </button>
     </a>
-    <a href="https://allytoall.github.io/publickey.asc">
+    <a href="/publickey.asc">
         <button class="btn blue">
             Download
         </button>
