--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta property="og:url" content="https://allytoall.github.io/" />
     <meta property="og:description" content="Allyce's Silly Little Website :3" />
     <title>Allyce</title>
-    <link rel="stylesheet" href="https://allytoall.github.io/output.css">
-    <script src="https://allytoall.github.io/urlHandling.js"></script>
+    <link rel="stylesheet" href="/output.css">
+    <script src="/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
