--- a/links/github/index.html
+++ b/links/github/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="GitHub" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://allytoall.github.io/thumbnails/github-mark.png" />
+    <meta property="og:url" content="https://github.com/AllyToAll" />
+    <meta property="og:description" content="Allyce's GitHub Profile
+This is a redirect to https://github.com/AllyToAll" />
     <meta http-equiv="refresh" content="0; url=https://github.com/AllyToAll">
     <title>Redirecting...</title>
 </head>
