--- a/links/index.html
+++ b/links/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Allyce's Links" />
+    <meta property="og:title" content="Links" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/links.png" />
     <meta property="og:url" content="https://allytoall.github.io/links" />
     <meta property="og:description" content="Allyce's Links" />
     <title>Links</title>
-    <link rel="stylesheet" href="https://allytoall.github.io/output.css">
-    <script src="https://allytoall.github.io/urlHandling.js"></script>
+    <link rel="stylesheet" href="/output.css">
+    <script src="/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
