--- a/studies/index.html
+++ b/studies/index.html
@@ -9,8 +9,8 @@
     <meta property="og:description"
           content="A page containing a bunch of studies"/>
     <title>Studies</title>
-    <link rel="stylesheet" href="https://allytoall.github.io/output.css">
-    <script src="https://allytoall.github.io/urlHandling.js"></script>
+    <link rel="stylesheet" href="/output.css">
+    <script src="/urlHandling.js"></script>
     <style>
         a {
             color: #1155cc;
