--- a/games/index.html
+++ b/games/index.html
@@ -8,8 +8,8 @@
     <meta property="og:url" content="https://allytoall.github.io/games" />
     <meta property="og:description" content="Allyce's Games" />
     <title>Games</title>
-    <link rel="stylesheet" href="https://allytoall.github.io/output.css">
-    <script src="https://allytoall.github.io/urlHandling.js"></script>
+    <link rel="stylesheet" href="/output.css">
+    <script src="/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
