Index quotes too

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         </svg>
         Discord
     </button>
+</a><br><a href="/quotes">
+    <button class="btn white">
+        Quotes
+    </button>
 </a><br><a href="/gpg">
     <button class="btn gpg">
         <img alt=""
