--- a/quotes/index.html
+++ b/quotes/index.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/index.png" />
     <meta property="og:url" content="https://allytoall.github.io/quotes" />
     <meta property="og:description" content="Quotes I like :3" />
-    <title>ideas</title>
+    <title>Quotes</title>
     <link rel="stylesheet" href="/output.css">
     <script src="/urlHandling.js"></script>
 </head>
