--- a/studies/index.html
+++ b/studies/index.html
@@ -222,8 +222,8 @@
     depression, suicidality and self-harm, and eating disorders. While these results are troubling, the first
     longitudinal study of patients undergoing comprehensive therapy for gender dysphoria has shown promising data to
     support the notion that appropriate medical treatment for gender-variant youth can lead to improved psychological
-    functioning. Indeed, in clinical observations outlined by Spack et al.<a href="#10.1542/peds.2015-3223">[6]
-</a>,
+    functioning. Indeed, in clinical observations outlined by Spack et al.
+    <a href="#10.1542/peds.2015-3223">[6]</a>,
     psychological functioning for these patients improved with medical intervention, suggesting that &ldquo;psychiatric
     symptoms might be secondary to a medical incongruence between mind and body, not primarily psychiatric (p423).
 </p><br>
@@ -270,25 +270,31 @@
     </a><br>
     The World Health Organization and the American Psychiatric Association no longer classify gender dysphoria as a
     mental health disorder<br>
-    The vast majority of TGE youths who transitioned socially remain stable in their gender identity during
-    adolescence [<a href="#10.1542/peds.2021-056082">16
-</a>]. Likewise, most adolescents who receive
-    hormone therapy for gender dysphoria continue to use these medications in adulthood [<a
-        href="#10.1080/15532739.2011.700873">8
-</a>].
-    Post-GAC regret is rare, occurring in approximately 0.3% of individuals [<a href="#10.21037/atm-20-6204">18
-</a>].<br>
-    Puberty blockers stall development of secondary sex characteristics and limit reproductive capacity while
-    in use. When stopped, the effects are fully reversible and sexual development catches up to chronological age
-    quickly [<a href="#10.1007/s004310051289">21&ndash;24</a>].<br>
-    Body dissatisfaction related to gender is correlated with disordered eating, whereby food restriction and
-    low body weight may forestall distressing physical change [<a
-        href="#10.1016/j.jadohealth.2018.07.016">29&ndash;32</a>]. Comorbid
-    eating disorders and gender dysphoria are associated with up to a 75% risk of suicidality [<a
-        href="#10.1016/j.jadohealth.2018.07.016">29</a>]. Medical aspects of gender-affirming care have a distinct
-    impact on reducing
-    suicidal ideation and remission of eating disorders [<a href="#10.1542/peds.2019-1725">13</a>,<a
-        href="#10.1542/peds.2013-2958">33</a>].
+    The vast majority of TGE youths who transitioned socially remain stable in their gender identity during adolescence.
+    <a href="#10.1542/peds.2021-056082">[16]</a>
+    Likewise, most adolescents who receive hormone therapy for gender dysphoria continue to use these medications in
+    adulthood.
+    <a href="#10.1080/15532739.2011.700873">[8]</a>
+    Post-GAC regret is rare, occurring in approximately 0.3% of individuals.
+    <a href="#10.21037/atm-20-6204">[18]</a><br>
+    Puberty blockers stall development of secondary sex characteristics and limit reproductive capacity while in use.
+    When stopped, the effects are fully reversible and sexual development catches up to chronological age quickly.
+    [<a href="#10.1007/s004310051289">21</a>,
+    <a href="#10.1111/j.1743-6109.2010.01943.x">22</a>,
+    <a>23</a>,
+    <a>24</a>]<br>
+    Body dissatisfaction related to gender is correlated with disordered eating, whereby food restriction and low body
+    weight may forestall distressing physical change.
+    [<a href="#10.1016/j.jadohealth.2018.07.016">29</a>,
+    <a>30</a>,
+    <a>31</a>,
+    <a>32</a>]
+    Comorbid eating disorders and gender dysphoria are associated with up to a 75% risk of suicidality.
+    <a href="#10.1016/j.jadohealth.2018.07.016">[29]</a>
+    Medical aspects of gender-affirming care have a distinct impact on reducing suicidal ideation and remission of
+    eating disorders.
+    [<a href="#10.1542/peds.2019-1725">13</a>,
+    <a href="#10.1542/peds.2013-2958">33</a>]
 </p><br>
 
 <h1 id="10.1542/peds.2021-056082">
@@ -410,39 +416,39 @@
         https://doi.org/10.1016/j.jadohealth.2024.09.009
     </a><br>
     TGD adolescents experience health inequities due in large part to gender minority stress and gender
-    dysphoria. [<a href="#10.1093/jpepsy/jsaa040">3</a>,<a href="#10.1037/sgd0000081">4</a>]
+    dysphoria.
+    [<a href="#10.1093/jpepsy/jsaa040">3</a>,
+    <a href="#10.1037/sgd0000081">4</a>]
     For instance, TGD youth have been found to experience higher rates of anxiety, depression, suicidality, and
-    nonsuicidal self-harm when compared to cisgender youth. [<a href="#10.3390/ijerph20010785">5</a>,<a
-        href="#10.1016/j.jadohealth.2024.08.009">6</a>]
+    nonsuicidal self-harm when compared to cisgender youth.
+    [<a href="#10.3390/ijerph20010785">5</a>,
+    <a href="#10.1016/j.jadohealth.2024.08.009">6</a>]
     A growing body of research has demonstrated that the current sociopolitical environment, rife with misinformation
     about TGD identities and active threats to the accessibility of GAC, is also negatively impacting TGD people&rsquo;s
-    mental health, [<a href="#10.1037/sgd0000495">7</a>,<a href="#10.1007/s13178-021-00602-w">8</a>] thereby acting as a
-    distal gender minority stressor.<br>
+    mental health
+    [<a href="#10.1037/sgd0000495">7</a>,
+    <a href="#10.1007/s13178-021-00602-w">8</a>]
+    thereby acting as a distal gender minority stressor.<br>
     Existing research demonstrates the effectiveness of medical GAC interventions through the alleviation of
-    distress [<a href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">18&ndash;21
-</a>]
-    and improvement in well-being and quality of life. [<a
-        href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">20
-</a>,<a
-        href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">22&ndash;24
-</a>]<br>
+    distress
+    [<a href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">18&ndash;21</a>]
+    and improvement in well-being and quality of life.
+    [<a href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">20</a>,
+    <a href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">22&ndash;24</a>]<br>
     One critique is that the data are often cross-sectional. While cross-sectional data can be useful for
     demonstrating the experience of a specific group of participants and should not be discounted outright, there are
     also longitudinal and population-based studies showing benefits to GAC in youth, specifically regarding increased
-    well-being and reduction in gender dysphoria, [<a
-        href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">18</a>,<a
-        href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">19</a>,<a
-        href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">23</a>,<a
-        href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">24</a>,<a
-        href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">27&ndash;31
-</a>]
-    with continuity of care with health-care providers impacting long-term positive adjustment. [<a
-        href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">32
-</a>]
+    well-being and reduction in gender dysphoria,
+    [<a href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">18</a>,
+    <a href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">19</a>,
+    <a href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">23</a>,
+    <a href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">24</a>,
+    <a href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">27&ndash;31</a>]
+    with continuity of care with health-care providers impacting long-term positive adjustment.
+    [<a href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">32</a>]
     In addition to the effectiveness of these treatments in reducing distress, studies also indicate that GAC for TGD
-    youth is safe, with side effects similar to general medical interventions. [<a
-        href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">33&ndash;36
-</a>].<br>
+    youth is safe, with side effects similar to general medical interventions.
+    [<a href="https://www.jahonline.org/article/S1054-139X(24)00439-7/fulltext%23">33&ndash;36</a>].<br>
     Rates of detransition are very low and do not warrant blanket bans of interventions that effectively address gender
     dysphoria for a large percentage of this population.
 </p><br>
@@ -452,26 +458,22 @@
     <a href="https://doi.org/10.1016/j.lana.2023.100544">
         https://doi.org/10.1016/j.lana.2023.100544
     </a><br>
-    GAC is linked to improved quality of life and mental health among trans people.<a
-        href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">4</a>,<a
-        href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">6</a>,<a
-        href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">7
-</a>&nbsp;Notably,
-    in a large match control study, use of hormones was associated with less depression, and trans people not on
-    hormones had 4-fold increased risk of depressive disorder.<a
-        href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">8
-</a>&nbsp;Results
-    from a prospective cohort study of U.S. trans youths showed increases in positive psychological outcomes, including
-    positive affect and life satisfaction, and decreases in depression and anxiety symptoms after receiving 2 years of
-    hormones&mdash;addressing the lack of longitudinal data in this area.<a
-        href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">9
-</a>&nbsp;Notably,
-    this study also reported a total of 3.5% suicidal ideation<a
-        href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">9
-</a>&mdash;a
-    comparable rate to the U.S. general population rate of 4.6%.<a
-        href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">3
-</a>&nbsp;To date, no studies have reported findings that suggest GAC increases negative mental health outcomes.
+    GAC is linked to improved quality of life and mental health among trans people.
+    <a href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">4</a>,
+    <a href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">6</a>,
+    <a href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">7</a>
+    Notably, in a large match control study, use of hormones was associated with less depression, and trans people not
+    on hormones had 4-fold increased risk of depressive disorder.
+    <a href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">8</a>
+    Results from a prospective cohort study of U.S. trans youths showed increases in positive psychological outcomes,
+    including positive affect and life satisfaction, and decreases in depression and anxiety symptoms after receiving 2
+    years of hormones&mdash;addressing the lack of longitudinal data in this area.
+    <a href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">9</a>
+    Notably, this study also reported a total of 3.5% suicidal ideation
+    <a href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">9</a>
+    &mdash;a comparable rate to the U.S. general population rate of 4.6%.
+    <a href="https://www.thelancet.com/journals/lanam/article/PIIS2667-193X(23)00118-7/fulltext%23">3</a>
+    To date, no studies have reported findings that suggest GAC increases negative mental health outcomes.
 </p><br>
 
 <h1 id="10.1016/j.sexol.2006.04.002">
@@ -547,9 +549,9 @@
     regret.
 </p><br>
 
-<h1 id="10.1111/j.1365-2265.2009.03625.x">Hormonal therapy and sex reassignment: a systematic review and meta-analysis
-    of quality of life
-    and psychosocial outcomes
+<h1 id="10.1111/j.1365-2265.2009.03625.x">
+    Hormonal therapy and sex reassignment: a systematic review and meta-analysis of quality of life and psychosocial
+    outcomes
 </h1>
 <p>
     <a href="https://doi.org/10.1111/j.1365-2265.2009.03625.x">
@@ -557,9 +559,9 @@
     </a>
 </p><br>
 
-<h1 id="10.1176/appi.ajp.2019.19010080">Reduction in Mental Health Treatment Utilization Among Transgender Individuals
-    After
-    Gender-Affirming Surgeries: A Total Population Study
+<h1 id="10.1176/appi.ajp.2019.19010080">
+    Reduction in Mental Health Treatment Utilization Among Transgender Individuals After Gender-Affirming Surgeries: A
+    Total Population Study
 </h1>
 <p>
     <a href="https://doi.org/10.1176/appi.ajp.2019.19010080">
@@ -567,8 +569,8 @@
     </a>
 </p><br>
 
-<h1 id="10.1177/26318318231189836">The Impact of Gender-affirming Surgeries on Suicide-related Outcomes: A Systematic
-    Review
+<h1 id="10.1177/26318318231189836">
+    The Impact of Gender-affirming Surgeries on Suicide-related Outcomes: A Systematic Review
 </h1>
 <p>
     <a href="https://doi.org/10.1177/26318318231189836">
@@ -576,9 +578,9 @@
     </a>
 </p><br>
 
-<h1 id="10.1186/s12889-015-1867-2">Intervenable factors associated with suicide risk in transgender persons: a
-    respondent driven
-    sampling study in Ontario, Canada
+<h1 id="10.1186/s12889-015-1867-2">
+    Intervenable factors associated with suicide risk in transgender persons: a respondent driven sampling study in
+    Ontario, Canada
 </h1>
 <p>
     <a href="https://doi.org/10.1186/s12889-015-1867-2">
@@ -586,9 +588,8 @@
     </a>
 </p><br>
 
-<h1 id="10.1371/journal.pone.0261039">Access to gender-affirming hormones during adolescence and mental health outcomes
-    among
-    transgender adults
+<h1 id="10.1371/journal.pone.0261039">
+    Access to gender-affirming hormones during adolescence and mental health outcomes among transgender adults
 </h1>
 <p>
     <a href="https://doi.org/10.1371/journal.pone.0261039">
