--- a/studies/index.html
+++ b/studies/index.html
@@ -431,13 +431,13 @@
     thereby acting as a distal gender minority stressor.<br>
     Existing research demonstrates the effectiveness of medical GAC interventions through the alleviation of
     distress
-    [<a href="#10.1186/s13633-019-0071-z">18</a>,
+    [<a href="#10.1186/s13633-020-00078-2">18</a>,
     <a href="#10.1111/j.1743-6109.2010.01943.x">19</a>,
     <a href="#10.1542/peds.2013-2958">20</a>,
     <a href="#10.1016/j.anpedi.2020.01.019">21</a>]
     and improvement in well-being and quality of life.
     [<a href="#10.1542/peds.2013-2958">20</a>,
-    <a href="#10.1056/nejmoa2206297">22</a>,
+    <a href="#10.1056/NEJMoa2206297">22</a>,
     <a href="#10.1001/jamanetworkopen.2022.0978">23</a>,
     <a href="#10.1016/j.jadohealth.2019.12.018">24</a>]<br>
     One critique is that the data are often cross-sectional. While cross-sectional data can be useful for
@@ -465,6 +465,94 @@
     dysphoria for a large percentage of this population.
 </p><br>
 
+<h1 id="10.1093/jpepsy/jsaa040">
+    Health Disparities in Transgender and Gender Expansive Adolescents: A Topical Review From a Minority Stress
+    Framework
+</h1>
+<p>
+    <a href="https://doi.org/10.1093/jpepsy/jsaa040">
+        https://doi.org/10.1093/jpepsy/jsaa040
+    </a>
+</p><br>
+
+
+<h1 id="10.1037/sgd0000081">
+    Development of the Gender Minority Stress and Resilience Measure.
+</h1>
+<p>
+    <a href="https://doi.org/10.1037/sgd0000081">
+        https://doi.org/10.1037/sgd0000081
+    </a>
+</p><br>
+
+<h1 id="10.3390/ijerph20010785">
+    Gender Felt Pressure, Affective Domains, and Mental Health Outcomes among Transgender and Gender Diverse (TGD)
+    Children and Adolescents: A Systematic Review with Developmental and Clinical Implications
+</h1>
+<p>
+    <a href="https://doi.org/10.3390/ijerph20010785">
+        https://doi.org/10.3390/ijerph20010785
+    </a>
+</p><br>
+
+<h1 id="10.1016/j.jadohealth.2024.08.009">
+    Outness, Acceptance, and Victimization: A Longitudinal Study of Depressive Symptoms and Suicidality of Lesbian, Gay,
+    and Bisexual and Transgender and Gender Diverse Youth
+</h1>
+<p>
+    <a href="https://doi.org/10.1016/j.jadohealth.2024.08.009">
+        https://doi.org/10.1016/j.jadohealth.2024.08.009
+    </a>
+</p><br>
+
+<h1 id="10.1037/sgd0000495">
+    “I am afraid for those kids who might find death preferable”: Parental figures’ reactions and coping strategies to
+    bans on gender affirming care for transgender and gender diverse youth.
+</h1>
+<p>
+    <a href="https://doi.org/10.1037/sgd0000495">
+        https://doi.org/10.1037/sgd0000495
+    </a>
+</p><br>
+
+<h1 id="10.1007/s13178-021-00602-w">
+    Uncertainty and Confusion Regarding Transgender Non-discrimination Policies: Implications for the Mental Health of
+    Transgender Americans
+</h1>
+<p>
+    <a href="https://doi.org/10.1007/s13178-021-00602-w">
+        https://doi.org/10.1007/s13178-021-00602-w
+    </a>
+</p><br>
+
+<h1 id="10.1186/s13633-020-00078-2">
+    Longitudinal impact of gender-affirming endocrine intervention on the mental health and well-being of transgender
+    youths: preliminary results
+</h1>
+<p>
+    <a href="https://doi.org/10.1186/s13633-020-00078-2">
+        https://doi.org/10.1186/s13633-020-00078-2
+    </a>
+</p><br>
+
+<h1 id="10.1016/j.anpedi.2020.01.019">
+
+</h1>
+<p>
+    <a href="https://doi.org/10.1016/j.anpedi.2020.01.019">
+        https://doi.org/10.1016/j.anpedi.2020.01.019
+    </a>
+</p><br>
+
+<h1 id="">
+
+</h1>
+<p>
+    <a href="https://doi.org/">
+        https://doi.org/
+    </a>
+</p><br>
+
 <h1 id="10.1016/j.lana.2023.100544">Gender-affirming care is preventative care</h1>
 <p>
     <a href="https://doi.org/10.1016/j.lana.2023.100544">
@@ -480,9 +568,9 @@
     Results from a prospective cohort study of U.S. trans youths showed increases in positive psychological outcomes,
     including positive affect and life satisfaction, and decreases in depression and anxiety symptoms after receiving 2
     years of hormones&mdash;addressing the lack of longitudinal data in this area.
-    <a href="#10.1056/nejmoa2206297">[9]</a>
+    <a href="#10.1056/NEJMoa2206297">[9]</a>
     Notably, this study also reported a total of 3.5% suicidal ideation
-    <a href="#10.1056/nejmoa2206297">[9]</a>
+    <a href="#10.1056/NEJMoa2206297">[9]</a>
     &mdash;a comparable rate to the U.S. general population rate of 4.6%.
     <a href="#https://transequality.org/sites/default/files/docs/usts/USTS-Full-Report-Dec17.pdf">[3]</a>
     To date, no studies have reported findings that suggest GAC increases negative mental health outcomes.
