--- a/studies/index.html
+++ b/studies/index.html
@@ -444,7 +444,7 @@
     demonstrating the experience of a specific group of participants and should not be discounted outright, there are
     also longitudinal and population-based studies showing benefits to GAC in youth, specifically regarding increased
     well-being and reduction in gender dysphoria,
-    [<a href="#10.1186/s13633-019-0071-z">18</a>,
+    [<a href="#10.1186/s13633-020-00078-2">18</a>,
     <a href="#10.1111/j.1743-6109.2010.01943.x">19</a>,
     <a href="#10.1001/jamanetworkopen.2022.0978">23</a>,
     <a href="#10.1016/j.jadohealth.2019.12.018">24</a>,
@@ -536,7 +536,7 @@
 </p><br>
 
 <h1 id="10.1016/j.anpedi.2020.01.019">
-
+    Psychosocial assessment in transgender adolescents
 </h1>
 <p>
     <a href="https://doi.org/10.1016/j.anpedi.2020.01.019">
@@ -544,12 +544,67 @@
     </a>
 </p><br>
 
-<h1 id="">
-
+<h1 id="10.1016/j.jadohealth.2019.12.018">
+    Psychological Functioning in Transgender Adolescents Before and After Gender-Affirmative Care Compared With
+    Cisgender General Population Peers
 </h1>
 <p>
-    <a href="https://doi.org/">
-        https://doi.org/
+    <a href="https://doi.org/10.1016/j.jadohealth.2019.12.018">
+        https://doi.org/10.1016/j.jadohealth.2019.12.018
+    </a>
+</p><br>
+
+<h1 id="10.3928/19382359-20210818-02">
+    Medical Trauma in LGBTQIA Youth: Adapting Trauma-Informed Affirming Clinical Practices
+</h1>
+<p>
+    <a href="https://doi.org/10.3928/19382359-20210818-02">
+        https://doi.org/10.3928/19382359-20210818-02
+    </a>
+</p><br>
+
+<h1 id="10.23750/abm.v91i1.9244">
+    Current approach to the clinical care of adolescents with gender dysphoria
+</h1>
+<p>
+    <a href="https://doi.org/10.23750/abm.v91i1.9244">
+        https://doi.org/10.23750/abm.v91i1.9244
+    </a>
+</p><br>
+
+<h1 id="10.1016/j.jpeds.2013.10.068">
+    Clinical Management of Youth with Gender Dysphoria in Vancouver
+</h1>
+<p>
+    <a href="https://doi.org/10.1016/j.jpeds.2013.10.068">
+        https://doi.org/10.1016/j.jpeds.2013.10.068
+    </a>
+</p><br>
+
+<h1 id="10.1542/peds.2020-023549">
+    Thrombosis Risk in Transgender Adolescents Receiving Gender-Affirming Hormone Therapy
+</h1>
+<p>
+    <a href="https://doi.org/10.1542/peds.2020-023549">
+        https://doi.org/10.1542/peds.2020-023549
+    </a>
+</p><br>
+
+<h1 id="10.1001/jamapediatrics.2017.5440">
+    Chest Reconstruction and Chest Dysphoria in Transmasculine Minors and Young Adults
+</h1>
+<p>
+    <a href="https://doi.org/10.1001/jamapediatrics.2017.5440">
+        https://doi.org/10.1001/jamapediatrics.2017.5440
+    </a>
+</p><br>
+
+<h1 id="10.1016/j.jadohealth.2017.08.005">
+    Physiologic Response to Gender-Affirming Hormones Among Transgender Youth
+</h1>
+<p>
+    <a href="https://doi.org/10.1016/j.jadohealth.2017.08.005">
+        https://doi.org/10.1016/j.jadohealth.2017.08.005
     </a>
 </p><br>
 
@@ -574,6 +629,35 @@
     &mdash;a comparable rate to the U.S. general population rate of 4.6%.
     <a href="#https://transequality.org/sites/default/files/docs/usts/USTS-Full-Report-Dec17.pdf">[3]</a>
     To date, no studies have reported findings that suggest GAC increases negative mental health outcomes.
+</p><br>
+
+<h1 id="10.1146/annurev-publhealth-052620-100313">
+    Health and Health Care Among Transgender Adults in the United States
+</h1>
+<p>
+    <a href="https://doi.org/10.1146/annur  ev-publhealth-052620-100313">
+        https://doi.org/10.1146/annurev-publhealth-052620-100313
+    </a>
+</p><br>
+
+<h1 id="10.1089/trgh.2015.0008">
+    A Systematic Review of the Effects of Hormone Therapy on Psychological Functioning and Quality of Life in
+    Transgender Individuals
+</h1>
+<p>
+    <a href="https://doi.org/10.1089/trgh.2015.0008">
+        https://doi.org/10.1089/trgh.2015.0008
+    </a>
+</p><br>
+
+<h1 id="10.1016/j.jad.2018.02.051">
+    Levels of depression in transgender people and its predictors: Results of a large matched control study with
+    transgender people accessing clinical services
+</h1>
+<p>
+    <a href="https://doi.org/10.1016/j.jad.2018.02.051">
+        https://doi.org/10.1016/j.jad.2018.02.051
+    </a>
 </p><br>
 
 <h1 id="10.1016/j.sexol.2006.04.002">
