Reformat Better opengraph tags Add an About me

--- a/blahaj/index.html
+++ b/blahaj/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Blahaj" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://allytoall.github.io/thumbnails/Blobhaj_Default.png" />
-    <meta property="og:url" content="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" />
-    <meta property="og:description" content="Allyce's Blahaj :3
-This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" />
-    <meta http-equiv="refresh" content="0; url=https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">
+    <meta content="Blahaj" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="https://allytoall.github.io/thumbnails/Blobhaj_Default.png" property="og:image"/>
+    <meta content="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" property="og:url"/>
+    <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
+          property="og:description"/>
+    <meta content="0; url=https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" http-equiv="refresh">
     <title>Redirecting...</title>
 </head>
 <body>
 <p>This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte<br>
-    If you are not redirected automatically, <a href="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">click here</a>.</p>
+    If you are not redirected automatically, <a href="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">click
+        here</a>.</p>
 </body>
 </html>
