--- a/discord/index.html
+++ b/discord/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Discord" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://discord.com/users/406481120641810433" />
-    <meta property="og:image" content="https://allytoall.github.io/thumbnails/Discord-Symbol-Black.png" />
-    <meta property="og:description" content="Allyce's Discord Profile" />
+    <meta content="Discord" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="https://discord.com/users/406481120641810433" property="og:url"/>
+    <meta content="https://allytoall.github.io/thumbnails/Discord-Symbol-Black.png" property="og:image"/>
+    <meta content="Allyce's Discord Profile" property="og:description"/>
     <title>Discord</title>
-    <link rel="stylesheet" href="/output.css">
+    <link href="/output.css" rel="stylesheet">
     <script src="/urlHandling.js"></script>
 </head>
 <body class="background">
