Add about me button to index

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     <h1 class="title">
         Welcome to Allyce's website :)
     </h1>
-    <a href="https://en.pronouns.page/@Allyce">
-        <button class="btn pronoun">
-            <img alt="" src="https://en.pronouns.page/logo/logo-primary.svg"> Pronouns
+    <a href="/aboutme">
+        <button class="btn white">
+            About me
         </button>
-    </a><br><a href="/links">
+    </a><br><a href="https://en.pronouns.page/@Allyce">
+    <button class="btn pronoun">
+        <img alt="" src="https://en.pronouns.page/logo/logo-primary.svg"> Pronouns
+    </button>
+</a><br><a href="/links">
     <button class="btn white">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-link"
              viewBox="0 0 16 16">
