--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -91,7 +91,7 @@
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Non-binary">
     <button class="btn white">
-        <img src="../thumbnails/Nonbinary_flag.svg.png" alt=""/>
+        <img src="/thumbnails/Nonbinary_flag.svg.png" alt=""/>
         Nonbinary Pride Flag</button>
 </a><br><a href="https://en.wikipedia.org/wiki/Anarchist_symbolism#Black_flag">
     <button class="btn white">
