Better iron front logo

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -86,16 +86,16 @@
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Three_Arrows">
     <button class="btn white">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="236.5 0 607 607"
-             preserveAspectRatio="xMidYMid meet">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="236.5 0 607 607" preserveAspectRatio="xMidYMid meet">
+            <rect x="236.5" y="0" width="607" height="607" fill="black"/>
             <g transform="translate(0,607) scale(0.1,-0.1)">
-                <path d="M0 3035 l0 -3035 5400 0 5400 0 0 3035 0 3035 -5400 0 -5400 0 0
+                <path fill="white" d="M0 3035 l0 -3035 5400 0 5400 0 0 3035 0 3035 -5400 0 -5400 0 0
 -3035z m5605 2345 c570 -56 1079 -290 1483 -685 293 -285 493 -604 617 -983
 89 -269 120 -497 112 -811 -7 -312 -55 -550 -167 -833 -267 -674 -872 -1219
 -1578 -1423 -261 -75 -386 -90 -722 -90 -220 1 -273 4 -383 24 -687 121 -1263
 496 -1642 1066 -126 190 -245 447 -304 658 -63 226 -88 406 -90 657 -5 653
 257 1277 730 1735 313 303 669 503 1099 618 247 66 582 92 845 67z"/>
-                <path d="M5057 4960 c-431 -76 -786 -251 -1086 -536 -279 -266 -471 -586 -565
+                <path fill="white" d="M5057 4960 c-431 -76 -786 -251 -1086 -536 -279 -266 -471 -586 -565
 -944 -51 -195 -60 -270 -60 -515 0 -209 2 -242 27 -367 31 -160 62 -259 122
 -404 204 -488 623 -899 1111 -1092 639 -254 1346 -181 1909 196 486 326 805
 839 881 1416 22 164 15 456 -15 611 -74 395 -252 738 -530 1027 -275 286 -586
