Better iron front logo

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -110,7 +110,7 @@ l-122 6 0 386 0 386 113 -113 c62 -61 117 -112 124 -112 6 0 312 298 679 663
 813 1000 990 179 178 327 323 330 323 3 0 75 -70 160 -155z"/>
             </g>
         </svg>
-        Iron Front / SPD - Three Arrows (Minus One)
+        Three Arrows (Minus One)
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Non-binary">
     <button class="btn white">
