--- a/apcs/index.html
+++ b/apcs/index.html
@@ -1,1 +1,2 @@
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMe71TDHVfoAIVikX0W5E4Tk1OJScFCCfb27fqd3i__VF1whXuReAHX_yHJRdSezvCC4XU0rZ0g-e7/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMe71TDHVfoAIVikX0W5E4Tk1OJScFCCfb27fqd3i__VF1whXuReAHX_yHJRdSezvCC4XU0rZ0g-e7/pubhtml?widget=true&amp;headers=false"
+        style="position: absolute; top:0; left:0; width:100%; height:100%; border:0;"></iframe>
