APCS has more styling More studies to studies

--- a/apcs/index.html
+++ b/apcs/index.html
@@ -1,2 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta property="og:title" content="Allyce's Power Corp Scraper"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://allytoall.github.io/thumbnails/index.png"/>
+    <meta property="og:url" content="https://allytoall.github.io/"/>
+    <meta property="og:description" content="Allyce's Power Corp Scraper visual example"/>
+    <title>Allyce</title>
+    <link rel="stylesheet" href="/output.css">
+    <script src="/urlHandling.js"></script>
+</head>
+<body class="background">
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMe71TDHVfoAIVikX0W5E4Tk1OJScFCCfb27fqd3i__VF1whXuReAHX_yHJRdSezvCC4XU0rZ0g-e7/pubhtml?widget=true&amp;headers=false"
-        style="position: absolute; top:0; left:0; width:100%; height:100%; border:0;"></iframe>
+        style="position: absolute; top:0; left:0; width:100%; height:90%; border:0;"></iframe>
+<div style="
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 20px;
+    ">
+    <a href="/">
+        <button class="btn gray">To Allyce's Website</button>
+    </a>
+
+    <a href="https://github.com/AllyToAll/AllycePowerCorpScraper">
+        <button class="btn gray">To AllycePowerCorpScraper</button>
+    </a>
+</div>
+</body>
+</html>
