--- a/studies/index.html
+++ b/studies/index.html
@@ -875,6 +875,24 @@
     </a>
 </p><br>
 
+<h1 id="10.1038/378068a0">
+    A sex difference in the human brain and its relation to transsexuality
+</h1>
+<p>
+    <a href="https://doi.org/10.1038/378068a0">
+        https://doi.org/10.1038/378068a0
+    </a>
+</p><br>
+
+<h1 id="10.1038/s41591-025-04023-9">
+    Plasma proteome adaptations during feminizing gender-affirming hormone therapy
+</h1>
+<p>
+    <a href="https://doi.org/10.1038/s41591-025-04023-9">
+        https://doi.org/10.1038/s41591-025-04023-9
+    </a>
+</p><br>
+
 <h1 id="https://transequality.org/sites/default/files/docs/usts/USTS-Full-Report-Dec17.pdf">
     The Report of the 2015 U.S. Transgender Survey
 </h1>
