--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -67,9 +67,11 @@
         Scientism 🧑‍🔬
     </button>
 </a><br><br>
-    <p>
-        <b>Symbols on my profile picture</b>
-    </p>
+    <a href="/thumbnails/pfp.jpg">
+        <button class="btn gray">
+            <b>Symbols on my profile picture</b>
+        </button>
+    </a>
     <a href="https://en.wikipedia.org/wiki/Industrial_Workers_of_the_World">
         <button class="btn white">
             <img src="/thumbnails/IWW-The-Black-Cat-Sabo-Tabby.webp" alt=""/>
