Where possible, use simpleicons

--- a/gpg/index.html
+++ b/gpg/index.html
@@ -15,8 +15,7 @@
 <body class="background">
 <div class="input">
     <a class="title">
-        <img alt=""
-             src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/GnuPG-Logo.svg/1920px-GnuPG-Logo.svg.png">
+        <img alt="" src="https://simpleicons.org/icons/gnuprivacyguard.svg">
         GnuPG Public Key
     </a>
     <a href="https://github.com/AllyToAll/AllyToAll.github.io/blob/main/publickey.asc">
